[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "breach"
version = "0.1.0"
description = "A terminal-based SCP Foundation database viewer."
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "requests>=2.28",
    "beautifulsoup4>=4.12",
]

[project.scripts]
breach = "breach.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["breach*"]
